deploy/k8s/preprod/redis/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linklite-redis
  namespace: linklite-preprod
spec:
  selector:
    app.kubernetes.io/name: linklite-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  type: ClusterIP
